--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 jdk: oraclejdk8
 
+install: ./gradlew clean jar
+
 script:
-  echo 'testing coming soon'
+  - echo 'testing comming soon'
