--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 language: java
 jdk: oraclejdk9
 
+env:
+  - COVERAGE=0.31
+
 install: ./gradlew clean jar
 
 script:
@@ -12,7 +15,7 @@ after_success:
   - find . -name jacocoTestReport.csv|xargs cat|awk -F',' '{print $3" "$4" "$5}'
 
 before_deploy:
-  - ./gradlew test jacocoTestCoverageVerification
+  - COVERAGE=${COVERAGE} ./gradlew test jacocoTestCoverageVerification
 
 deploy:
   - provider: script
