--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ language: java
 jdk: oraclejdk9
 
 env:
-  - COVERAGE=0.31
+  - COVERAGE=0.5 TARGET=ui
+  - COVERAGE=0.5 TARGET=service/cart
+  - COVERAGE=0.5 TARGET=service/user
+  - COVERAGE=0.39 TARGET=repository/order
+  - COVERAGE=0.5 TARGET=repository/cart
+  - COVERAGE=0.5 TARGET=repository/product
+  - COVERAGE=0.31 TARGET=repository/user
 
 install: ./gradlew clean jar
 
@@ -15,10 +21,13 @@ after_success:
   - find . -name jacocoTestReport.csv|xargs cat|awk -F',' '{print $3" "$4" "$5}'
 
 before_deploy:
-  - COVERAGE=${COVERAGE} ./gradlew test jacocoTestCoverageVerification
+  - COVERAGE=${COVERAGE} ./gradlew -p ./monolithic/$TARGET check
 
-deploy:
-  - provider: script
-    script: echo "WIP"
-    on:
-       all_branches: true
+jobs:
+  include:
+    stage: deploy
+    deploy:
+      - provider: script
+        script: echo "WIP"
+        on:
+          all_branches: true
